# kafka-conduit

./: LICENSE  kafka-conduit.cabal  stack.yaml
src/Data/Conduit/: Kafka.hs
test/: Main.hs  Spec.hs  start_kafka.sh  stop_kafka.sh
