name:                kafka-conduit
version:             0.1.0.0
synopsis:            Kafka Conduit
description:         Please see README.md
homepage:            http://github.com/atidot/kafka-conduit#readme
license:             BSD3
license-file:        LICENSE
author:              Atidot Inc.
maintainer:          barak@atidot.com
copyright:           2015 Atidot Inc.
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Conduit.Kafka
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , resourcet
                     , bytestring
                     , conduit
                     , haskakafka
  default-language:    Haskell2010

test-suite kafka-conduit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kafka-conduit
                     , haskakafka
                     , process
                     , conduit
                     , conduit-combinators
                     , resourcet
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/atidot/kafka-conduit
